--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<script src="network.ts"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <div id="App"></div>
+
+        <script src="visualization.ts"></script>
+    </body>
+</html>
+
