--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <style>
+            body
+            {
+                background:#aaa;
+            }
+        </style>
     </head>
     <body>
         <div id="App"></div>
-
         <script src="visualization.ts"></script>
     </body>
 </html>
